--- a/account/team/index.html
+++ b/account/team/index.html
@@ -1505,7 +1505,7 @@
     function editEmployee(ele){
       let employeeId = ele.getAttribute('data-empid')
       let roleId = ele.getAttribute('data-roleid')
-      console.log(employeeId, roleId)
+      // console.log(employeeId, roleId)
 
       window.location.href = './edit.html?url=' +orgUrl+"&ent=" +orgEnt+ "&empid=" +employeeId+ "&roleid=" + roleId;
 
