--- a/account/payroll/history.html
+++ b/account/payroll/history.html
@@ -656,6 +656,8 @@
       let detail_top_div = document.createElement('div');
       detail_top_div.className = "col-md-12";
       detail_top_div.setAttribute("style"," padding: 12px 0px 12px 0px;");
+      detail_top_div.setAttribute("onclick","editPayrollFunction(this)");
+      detail_top_div.setAttribute("data-id", doc.data().id);
       detail_top_div.appendChild(detail_div);
 
       //Del btn
@@ -736,6 +738,33 @@
 
     }
 
+    // Edit Student Function
+    function editPayrollFunction(elem){
+      // Get attribute and
+      if (JSON.parse(sessionStorage.getItem(SESSION_STORAGE_PAYROLL_ALL_DOCS_KEY)) == null ){
+        console.log("Error: Impossible to reach this state");
+        // Because this func only trigger when there's active class loaded
+        return;
+      }else{
+
+        let Obj = null;
+        let allList = null;
+
+        // Set the fields
+        allList = JSON.parse(sessionStorage.getItem(SESSION_STORAGE_PAYROLL_ALL_DOCS_KEY));
+        allList.forEach((item) => {
+          if (item.id === elem.getAttribute('data-id')){
+            sessionStorage.setItem(SESSION_STORAGE_PAYROLL_CURRENT_DOC_KEY, JSON.stringify(item));
+
+            // window.location = './edit-student.html';
+
+          }
+
+        });
+
+      }
+		}
+
 
   </script>
   <script>
@@ -746,7 +775,7 @@
     var START = "";
     $( document ).ready(function() {
 
-      // Delete Student Modal
+      //Edit Payrollt Modal
       $('#editPayrollModal').on('show.bs.modal', function (event) {
         let button = $(event.relatedTarget) // Button that triggered the modal
         PAYROLLID = button.data('id')
@@ -839,8 +868,16 @@
             .collection("Payroll")
             .doc(payrollCurrentObj[PAYROLL_ID]);
 
+          var payrollData = {
+            [PAYROLL_STATUS]: false,
+          }
 
-          promiseAll.push(docRef.delete());
+          if (payrollCurrentObj.docIdArr.length == 0){
+            promiseAll.push(docRef.delete());
+          }
+          else {
+            promiseAll.push(docRef.update(payrollData));
+          }
 
           // // batch.delete(docRef);
           // docRef.delete().then(() => {
@@ -872,22 +909,32 @@
 
               snapshots[1].forEach((doc) => {
                 console.log("Deleting deleted! " + payrollCurrentObj[PAYROLL_ID]);
-                console.log(doc.data()[PAY_ID])
-                console.log(doc.data()[PAY_TRANS_ID])
+                // console.log(doc.data()[PAY_ID])
+                // console.log(doc.data()[PAY_TRANS_ID])
 
                 let payslipRef = db.collection("dev")
                   .doc("v2")
                   .collection("Payslip")
                   .doc(doc.data()[PAY_ID]);
+                var payData = {
+                  [PAY_DATE_DEL]:  new Date(),
+                  [PAY_STATUS]: false,
+                }
 
-                promiseLayer1.push(payslipRef.delete())
+                // promiseLayer1.push(payslipRef.delete())
+                promiseLayer1.push(payslipRef.update(payData))
 
                 let transactionRef = db.collection("dev")
                   .doc("v2")
                   .collection("Transaction")
                   .doc(doc.data()[PAY_TRANS_ID]);
+                var transData = {
+                  [TRANS_DATE_EDIT]: new Date(),
+                  [TRANS_STATUS]: false,
+                }
 
-                promiseLayer1.push(transactionRef.delete())
+                // promiseLayer1.push(transactionRef.delete())
+                promiseLayer1.push(transactionRef.update(transData))
 
 
               });
