Remove unused permission

--- a/account/team/edit.html
+++ b/account/team/edit.html
@@ -1210,7 +1210,7 @@
 
           else{
             func.showNotification('top','center', 'danger', 'error_outline', "Error: No such employee." );
-            alert('Error: No such employee.')
+            // alert('Error: No such employee.')
             window.location.href='./?url=' + orgUrl + "&ent=" + orgEnt;
           }
 
