Edit Class: Label

--- a/account/class/edit-class.html
+++ b/account/class/edit-class.html
@@ -1559,8 +1559,10 @@
                           <div class="row" id="inRibbonSettings" style="display: none; padding: 0.5rem; margin-top: 0.5rem;">
 
                             <div class="col-md-4 full">
+
                               <p class="" style="font-size: smaller; font-weight: 300; color: gray; margin-bottom: 0;">Pick A Color</p>
-                              <input type="text" class="coloris" value="#e76f51" id="inLabelColor">
+                              <input type="text" id="inLabelColor" value="#e76f51" class="coloris">
+
 
                               <p class="" style="font-size: smaller; font-weight: 300; color: gray; margin-bottom: 0; margin-top: 0.5rem;">Content (Max 2 Chars / 1 Emoji ❤️)</p>
                               <input type="text" class="form-control" id="inLabelText" data-compulsory="false" maxlength="2">
